Fix EN and ES marketing guide spacing

--- a/content/marketing_style_guides/Writing Style Guide - EN/MSG_EN_style.css
+++ b/content/marketing_style_guides/Writing Style Guide - EN/MSG_EN_style.css
@@ -149,8 +149,7 @@ h5 {
 }
 
 li {
-    margin-left: 3rem;    
-    font-size: 0.9rem;
+    margin-left: 3rem;
 }
 
 table {
